--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,8 +17,12 @@
   <body>
     <header>
       <div class="inner">
-        <img src="https://github.com/WellspringChurchNC/prod-team/raw/master/images/logo-wellspring-text-white.png" width="350" height="100">
-        <a href="https://wellspringchurchnc.github.io/prod-team/"><h2>{{ site.description | default: site.github.project_tagline }}</h2></a>
+        <table style="width:100%">
+          <tr>
+            <td><img src="https://github.com/WellspringChurchNC/mission/raw/master/images/logo-wellspring-text-white.png" width="350" height="100"></td>
+            <td><a href="https://wellspringchurchnc.github.io/mission/"><h2>{{ site.description | default: site.github.project_tagline }}</h2></a></td> 
+          </tr>
+        </table>
       </div>
     </header>
 
