--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
   <body>
     <header>
       <div class="inner">
-        <table style="width:100%" border="0" style="border-collapse:collapse;" cellspacing="0" cellpadding="0">
+        <table style="width:100%" border=0 >
           <tr>
             <td><img src="https://github.com/WellspringChurchNC/mission/raw/master/images/logo-wellspring-text-white.png" width="350" height="100"></td>
             <td><a href="https://wellspringchurchnc.github.io/mission/"><h2><font color="#277eb2">{{ site.description | default: site.github.project_tagline }}</font></h2></a></td> 
