--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
     <header>
       <div class="inner">
         <table style="width:100%" border=0 >
-          <tr>
+          <tr bgcolor="#FFF">
             <td><img src="https://github.com/WellspringChurchNC/mission/raw/master/images/logo-wellspring-text-white.png" width="350" height="100"></td>
             <td><a href="https://wellspringchurchnc.github.io/mission/"><h2><font color="#277eb2">{{ site.description | default: site.github.project_tagline }}</font></h2></a></td> 
           </tr>
