--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,8 +19,8 @@
       <div class="inner">
         <table style="width:100%" border=0 >
           <tr bgcolor="#FFFFFF">
-            <td><img src="https://github.com/WellspringChurchNC/mission/raw/master/images/logo-wellspring-text-white.png" width="350" height="100"></td>
-            <td><a href="https://wellspringchurchnc.github.io/mission/"><h4><font color="#277eb2">{{ site.description | default: site.github.project_tagline }}</font></h4></a></td> 
+            <td width=50%><img src="https://github.com/WellspringChurchNC/mission/raw/master/images/logo-wellspring-text-white.png" width="350" height="100"></td>
+            <td width=50%><a href="https://wellspringchurchnc.github.io/mission/"><h3><font color="#277eb2">{{ site.description | default: site.github.project_tagline }}</font></h3></a></td> 
           </tr>
         </table>
       </div>
